# sfusd-rai

./: README.md  pyproject.toml
data/processed/: caaspp_ela.csv  caaspp_math.csv  capacity.csv  cast.csv  component_scores.csv  component_scores_augmented.csv  composite_scores_augmented.csv  composite_scores_raw.csv  facilities.csv  race_ethnicity_demographics.csv
data/raw/: supervisors.csv
data/raw/boarddocs/: capacity.csv  facilities.csv
data/raw/dataquest/: FRPM School-Level Data.csv  cast_ca2024_all_38_csv_v1.txt
data/raw/rai/: composite_scores_doc.csv  composite_scores_map.response
notebooks/: Setup.ipynb
notebooks/processing/: Combined.ipynb  ComponentScores.ipynb  CompositeScoresMap.ipynb  Demographics.ipynb  Excellence.ipynb  Facilities.ipynb
