[tool.poetry]
name = "sfusd-rai"
version = "0.1.0"
description = ""
authors = ["zuyezheng <zuyezheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
polars = "^1.9.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
levenshtein = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
